--- a/index.html
+++ b/index.html
@@ -13,18 +13,21 @@
 	  
 	
 	</head>
-	<body >
+	<body class="back">
 	<div id="text">
 	<div id="date"></div>
 	<div id="name">Bar Doitch</div>
-	<p>
-	Hello there,
-	<br> 
-	Each click of a letter displays the list of countries beginning with the same letter below 
+	<p id='exp'>
+	    Hello there!<br> 
+	    <b>Planning your next trip?</b>
+	    <br>We are here to give you all the information you need.
+	    <br> In this website you can choose your destination with the necessary information. 
+	    <br>
+	Each click on a letter will displays the list of countries beginning with the same letter below.
+	<br> Have a nice trip!
 	</p>
 	
-
-	</div>
+	
 	</div>
 	
 	</body>
